--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -32,12 +32,10 @@
 <!ENTITY Ctr_tabsontop1		"Pestañas arriba [tabsontop=true]">
 <!ENTITY Ctr_tabsontop2		"Pestañas no arriba [tabsontop=false]">
 <!ENTITY Ctr_tabsintitlebar	"Pestañas en la barra de título">
-<!ENTITY Ctr_tabwidth0		"Ancho-máximo: 180px (por defecto)">
-<!ENTITY Ctr_tabwidth1		"Ancho-máximo: 150px">
-<!ENTITY Ctr_tabwidth2		"Ancho-máximo: 250px (clásico)">
-<!ENTITY Ctr_tabmwidth0		"Ancho-minimo: 100px (por defecto)">
-<!ENTITY Ctr_tabmwidth1		"Ancho-minimo: 150px">
-<!ENTITY Ctr_tabmwidth2		"Ancho-minimo: 54px">
+<!ENTITY Ctr_tabwidthdef	"(por defecto)">
+<!ENTITY Ctr_tabwidthcla	"(clásico)">
+<!ENTITY Ctr_tabmaxwidth	"Ancho-máximo:">
+<!ENTITY Ctr_tabminwidth	"Ancho-minimo:">
 
 <!ENTITY Ctr_appbutton		"Botón de la aplicación">
 <!ENTITY Ctr_appbutton0		"Botón deshabilitado">
@@ -88,6 +86,7 @@
 <!ENTITY Ctr_tabnor			"Pestaña (por defecto)">
 <!ENTITY Ctr_tabhov			"Pestaña (subyacente)">
 <!ENTITY Ctr_tabact			"Pestaña (activa)">
+<!ENTITY Ctr_tabpen			"Pestaña (no leído)">
 <!ENTITY Ctr_ntabnor		"Nueva pestaña (por defecto)">
 <!ENTITY Ctr_ntabhov		"Nueva pestaña (subyacente)">
 <!ENTITY Ctr_topc			"arriba">
@@ -104,6 +103,7 @@
 <!ENTITY Ctr_bfurlbarfix 	"Corregir la frontera de radio de la barra de URL: 2px (Win) / 2.5px (Mac)">
 <!ENTITY Ctr_showtabclose	"Mostrar siempre el botón-pestaña de cierre (reiniciar Firefox!)">
 <!ENTITY Ctr_cpanelmenus	"Menús del panel compacto (marcadores, historial, etc)">
+<!ENTITY Ctr_panelmenucol	"Color de fondo alternativo para los 'menús del panel'">
 
 <!ENTITY Ctr_throbberalt	"Animación de carga alternativo para tabuladores throbber">
 <!ENTITY Ctr_bmanimation	"Animación al añadir nuevos marcadores">
