Translate other button color names

--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -59,11 +59,11 @@
 <!ENTITY Ctr_appbuttonc_n	"Черная кнопка (Nightly)">
 <!ENTITY Ctr_appbuttonc_t	"Прозрачная кнопка">
 <!ENTITY Ctr_appbuttonc_p	"Голубая кнопка (Palemoon)">
-<!ENTITY Ctr_appbuttonc_r	"Red button color">
+<!ENTITY Ctr_appbuttonc_r	"Красная кнопка">
 <!ENTITY Ctr_appbuttonc_g	"Зеленая кнопка">
 <!ENTITY Ctr_appbuttonc_gr	"Серая кнопка">
 <!ENTITY Ctr_appbuttonc_pu	"Фиолетовая кнопка">
-<!ENTITY Ctr_appbuttonc_wh	"White button color">
+<!ENTITY Ctr_appbuttonc_wh	"Белая кнопка">
 <!ENTITY Ctr_appbuttonI1	"рекомендуется перезапуск">
 <!ENTITY Ctr_appbuttonI1e	"not visible on OS titlebar">
 <!ENTITY Ctr_appbuttonI2	"Только цвета на панели заголовка">
